--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,10 @@
          /*max-width:700px;*/
          aspect-ratio: 1 / 1;
          position: relative;
-         border: 2px solid #444;
-         border-radius: 8px;
+         /*border: 2px solid #444;*/
+         /*border-radius: 8px;*/
          overflow: hidden;
-         background: #111;
+         /*background: #111;*/
          /*margin-bottom: 1rem;*/
      }
 
