--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,76 @@
     padding:1.2rem;
     margin-top:1.2rem;
 }
+.randomizer-settings hr {
+    text-align: center;
+    height:2px;
+    background-clip: border-box;
+    -webkit-background-clip: border-box;
+    background: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc );
+    background-size: 300% auto;
+    color: transparent;
+    animation: gradientMove 6s linear infinite;
+}
 
-.layer-item {
+.random-summary {
+    padding: 1rem;
+}
+
+    .animated-border-box {
+        border: 4px solid transparent;
+        border-radius: 12px;
+        /*background: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc );*/
+        background-size: 300% auto;
+        animation: gradientMove 6s linear infinite;
+        border-image: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc ) 1;
+        position: relative;
+        /*border-radius: 10px;*/
+        z-index: 0;
+        background: #111;
+    }
+
+
+    .animated-border-box::before {
+        content: '';
+        position: absolute;
+        inset: -4px;
+        z-index: -1;
+        /*border-radius: inherit;*/
+        background: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc );
+        background-size: 300% 300%;
+        animation: gradientMove 6s linear infinite;
+        mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+        -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+        mask-composite: exclude;
+        -webkit-mask-composite: xor;
+        padding: 4px;
+    }
+
+
+@keyframes gradientMove {
+    0% {
+        background-position: 0% center;
+    }
+
+    100% {
+        background-position: 300% center;
+    }
+}
+@keyframes huePulse {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+
+    100% {
+        filter: hue-rotate(360deg);
+    }
+}
+
+.randomizer-title.hue-cycle {
+    animation: gradientMove 6s linear infinite, huePulse 8s linear infinite;
+}
+
+    .layer-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
