--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@
         /*background: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc );*/
         background-size: 300% auto;
         animation: gradientMove 6s linear infinite;
-        border-image: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc ) 1;
+        border-image: linear-gradient( 90deg, #ff00cc, #3333ff, #00ffee, #ffcc00, #ff00cc );
         position: relative;
         /*border-radius: 10px;*/
         z-index: 0;
@@ -856,7 +856,7 @@ body.tooltips-disabled .tooltip-text {
 /* Hide pin toggle if on narrow screen */
 @media (max-width: 768px) {
     .pin-toggle {
-        display: none;
+        display: none !important;
     }
 }
 
