Layer Details Toggleable
Another menu is hideable now. Additions to privacy policy.
Fix to color stop selection on new project

--- a/styles.css
+++ b/styles.css
@@ -495,8 +495,9 @@
     margin-bottom: 8px;
 }
 
-#animationHeader {
-    cursor:pointer;
+#animationHeader,
+#detailsHeader {
+    cursor: pointer;
 }
 
 .animation-item {
