--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@ html, body {
 
 body {
     font-family: sans-serif;
-    background: linear-gradient(135deg, #1e1e2f 20.0%, #380045 80%, rgba(46,0,83,1.00) 100.0%);    
+    background: linear-gradient(45deg, rgba(0,21,42,1.00) 20%, rgba(25,0,57,1.00) 55.3%, rgba(27,0,50,1.00) 100%);
     color: #eee;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    min-height:100%;
+    min-height: 100%;
 }
 
 .main {
@@ -149,17 +149,17 @@ body {
          /*max-width: 700px;*/
      }
 
-         .layer-controls button,
-         .layer-editor button,
-         .layer-menu-btn {
-             margin: 0.3rem;
-             padding: 0.5rem 1rem;
-             background: #333;
-             color: white;
-             border: none;
-             border-radius: 4px;
-             cursor: pointer;
-         }
+        .layer-controls button,
+        .layer-editor button,
+        .layer-menu-btn {
+            margin: 0.3rem;
+            padding: 0.5rem 1rem;
+            background: #333;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
         .layer-controls input[type="text"],
         .layer-editor input[type="text"] {
@@ -259,13 +259,13 @@ body {
     animation: gradientMove 6s linear infinite, huePulse 8s linear infinite;
 }
 
-    .layer-item {
+.layer-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 0.5rem;
     padding: 0.5rem;
-    background: #2a2a3b;
+        background: linear-gradient(120deg, rgba(40, 0, 70, 0.85), rgba(15, 45, 75, 0.85));
     border-radius: 4px;
     cursor: pointer;
 }
@@ -294,10 +294,11 @@ body {
                  color: #fff;
              }
 
-         .layer-item.selected {
-             background: #444466;
-             font-weight: bold;
-         }
+    .layer-item.selected {
+        background: linear-gradient(135deg, rgba(58, 0, 74, 0.9), rgba(0, 72, 97, 0.8));
+        border: #43009b solid;
+        font-weight: bold;
+    }
 
      .layer-editor label {
          display: block;
@@ -333,6 +334,14 @@ body {
     color: #fff;
     border-radius: 4px;
     margin-top: 0.2rem;
+}
+
+#layerEditor {
+    background: linear-gradient(180deg, rgba(1, 61, 78, 1.00) 0%, rgba(25,0,57,1.00) 7%, rgba(51, 0, 87, 1.00) 100%);
+}
+#animate-block,
+.color-controls {
+    background: linear-gradient(180deg, rgba(1, 61, 78, 1.00) 0%, rgba(25,0,57,1.00) 25%, rgba(51, 0, 87, 1.00) 100%);
 }
 /*.layer-editor input[type="number"]
 {
@@ -511,7 +520,7 @@ body {
     display: flex;
     align-items: center;
     gap: 0.75rem;
-    background: #2a2a3b;
+    background: linear-gradient(180deg, rgba(20, 30, 60, 0.85), rgba(30, 10, 50, 0.85));
     padding: 0.5rem;
     border-radius: 6px;
     cursor: pointer;
@@ -519,7 +528,7 @@ body {
 }
 
     .template-item:hover {
-        background: #3c3c4e;
+        background: linear-gradient(145deg, rgba(18, 18, 36, 0.8), rgba(40, 0, 50, 0.8));
     }
 
 .template-preview {
@@ -577,9 +586,11 @@ body {
 
 .layer-controls {
     /*    margin-top: 1rem;
-*/ background: #2a2a3b;
+*/ /*background: #2a2a3b;*/
     padding: 0.5rem;
     border-radius: 6px;
+    border: 4px solid transparent;
+    /*border-image: linear-gradient(90deg, rgba(28, 128, 227, 1) 0%, rgba(49,206,146,1.00) 22.1%, rgba(167,206,49,1.00) 57.5%, rgba(218, 118, 210, 1) 100%);*/
     margin-bottom: 8px;
 }
 
@@ -589,7 +600,7 @@ body {
 }
 
 .animation-item {
-    background: #1f1f2f;
+    /*background: #1f1f2f;*/
     padding: 0.5rem;
     border-radius: 4px;
     margin-bottom: 0.5rem;
@@ -656,7 +667,7 @@ body {
     flex-direction: column;
     gap: 0.8rem;
     padding: 1rem;
-    background: #1e1e2f;
+    /*background: #1e1e2f;*/
     border-radius: 8px;
     color: white;
 }
