--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,7 @@ body {
 }*/
 
 select {
-    width: 100%;
+    /*width: 90%;*/
     padding: 0.6rem 0.6rem;
     background: #2c2c2c;
     border: none;
@@ -366,7 +366,7 @@ select {
 
 .layer-editor input[type="text"],
 .layer-editor input[type="number"] {
-    width: 100%;
+    /*width: 90%;*/
     padding: 0.5rem;
     border: 1px solid #4a3b6a;
     background: #1a1a2e;
@@ -382,14 +382,14 @@ input:focus {
 }
 
 .section-header {
-    background: linear-gradient(60deg, #4f034c 0%, #300057 50%, rgb(0, 46, 87) 100%);
+    background: linear-gradient(60deg, #4f034c 0%, #300057 15%, rgba(25,0,57,1.00) 30%, rgb(0, 46, 87) 100%);
     padding: 1rem;
 }
 /*#layer-details-block {
     background: linear-gradient(180deg, rgba(1, 61, 78, 1.00) 0%, rgba(25,0,57,1.00) 50%, rgba(51, 0, 87, 1.00) 100%);
 }*/
 .editor-section {
-    background: linear-gradient(202deg, rgb(0, 46, 87) 0%, rgba(25,0,57,1.00) 50%, rgba(51, 0, 87, 1.00) 100%);
+    background: linear-gradient(202deg, rgb(0, 46, 87) 0%, rgba(25,0,57,1.00) 50%, #300057 75%, rgba(51, 0, 87, 1.00) 100%);
     margin-top: 1rem;
 }
 /*.layer-editor input[type="number"]
@@ -638,7 +638,7 @@ input:focus {
 */ /*background: #2a2a3b;*/
     padding: 0.5rem;
     border-radius: 6px;
-    border: 4px solid transparent;
+    /*border: 4px solid transparent;*/
     /*border-image: linear-gradient(90deg, rgba(28, 128, 227, 1) 0%, rgba(49,206,146,1.00) 22.1%, rgba(167,206,49,1.00) 57.5%, rgba(218, 118, 210, 1) 100%);*/
     margin-bottom: 8px;
 }
