--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ body {
          position: relative;
          /*border: 2px solid #444;*/
          /*border-radius: 8px;*/
-         overflow: hidden;
+         /*overflow: hidden;*/
          /*background: #111;*/
          /*margin-bottom: 1rem;*/
      }
